@@ -9,5 +9,5 @@
 # full path name of this file's directory.
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded md5 2.0.2 [list source [file join $dir md5x.tcl]]
+package ifneeded md5 2.0.3 [list source [file join $dir md5x.tcl]]
 package ifneeded md5 1.4.3 [list source [file join $dir md5.tcl]]
